# quant-with-myself

./: .gitignore  Alpha158_因子实现手册.docx  README.md  config.yaml  config_2y_80.yaml  diagnose_collinearity.py  log.txt  log_20260518.txt  main.py  pyproject.toml  quant_label_experiment_design.md  test_inf.py  train_history.json
.devcontainer/: devcontainer.json
data/: check_data.py  load_data.py
database/: sp500_tickers.csv
exp_log/: experiment_report_cs_rank_vs_baseline.md  experiment_report_new_features.md
exp_log/step_2_01/: tho_20260519.md
features/: __init__.py  cs_rank.py  kbar.py  ma.py  make_features.py  make_features_new.py  roc.py  std.py  volume.py
fetcher/: fetch_prices.py  get_sp500_list.py
labels/: make_labels.py  processors.py
model/: evaluate.py  train.py
play/: Alpha158_manual.md  database.py  diagnose_eval.py  read_docx.py
scripts/: check_data.py  fetch_data.py  generate_config.py  probe_missing.py
test/: train_lgb.py
utils/: config.py
